welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:2: error: type mismatch;
 found   : Array[Int]
 required: Int
	var tab = new Array[Int](nums)
                                 ^indexOfValue:3: error: not found: value i
	if (tab(i) = value) {return value}
                ^