welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
	var tab = new Array[Int](nums)
	if (tab(i) = value) {return value}
	else {return -1}
}
